# rs-playground

./: Cargo.toml
.github/workflows/: build.yml
allocator/: Cargo.toml
allocator/examples/: allocator.rs
allocator/src/: alloc.rs  lib.rs  logger.rs  main.rs
asyncx/: Cargo.toml
asyncx/examples/: async_thread.rs
asyncx/src/: async_fn.rs  async_iter.rs  async_trait.rs  cancel_decorator.rs  delay.rs  future_stream.rs  lib.rs  line_stream.rs  poll_fn.rs  proxy.rs  recursion.rs  rt.rs  stream_map.rs  time_decorator.rs
bytes/src/: lib.rs
chat/: Cargo.toml
chat/src/: main.rs
closure/src/: lib.rs
dropck/: Cargo.toml
dropck/src/: lib.rs
eventbus/: Cargo.toml
eventbus/src/: lib.rs  macros.rs
ffi/src/: lib.rs
function/: Cargo.toml
function/benches/: function_item.rs
function/src/: lib.rs
gat/src/: family.rs  lending_iter.rs  lib.rs  mapper.rs  ref_iter.rs  select.rs
generic/src/: main.rs
grpc/: Cargo.toml
grpc/proto/: hello.proto
grpc/src/: client.rs  lib.rs  server.rs
hash/src/: lib.rs
hrtb/src/: lib.rs  peculiar.rs
http/: Cargo.toml
http/src/: axum_style_params.rs  error.rs  main.rs  session.rs
io/src/: lib.rs
iter/src/: lib.rs  unique.rs
lifetime/src/: async_lifetime.rs  lib.rs
list/src/: lib.rs
macrox/: Cargo.toml
macrox/examples/: builder.rs  enum_string.rs  rule.rs
macrox/src/: builder.rs  lib.rs
mem/src/: lib.rs
miox/: Cargo.toml
miox/src/: lib.rs
motorex/: Cargo.toml
motorex/src/: lib.rs
mutex/src/: lib.rs  mutex.rs
network/: Cargo.toml
network/examples/: p2p.rs  select.rs
network/src/: lib.rs
network/src/linux_poll/: epoll.rs  ffi.rs  mod.rs
network/src/macos_poll/: allowed_ips.rs  ffi.rs  kqueue.rs  mod.rs
ownership/src/: lib.rs
parser/: Cargo.toml
parser/src/: lib.rs  winnow.rs
pin/src/: lib.rs
pointer/: Cargo.toml
pointer/src/: cell.rs  lib.rs  manually.rs  rc.rs  refcell.rs  string.rs
ser/: Cargo.toml
ser/src/: byteorder.rs  lib.rs
shortener/: Cargo.toml
shortener/src/: error.rs  main.rs
thread/: Cargo.toml
thread/src/: lib.rs  mutex_poison.rs  thread_pool.rs
thumbor/: Cargo.toml  abi.proto  build.rs  pic_server.go
thumbor/src/: helper.rs  main.rs
thumbor/src/engine/: mod.rs  photon.rs
thumbor/src/pb/: abi.rs  mod.rs
tower/: Cargo.toml
tower/src/: concurrency.rs  future.rs  lib.rs  timeout.rs
trait_object/src/: lib.rs
vec/src/: lib.rs
wait_group/: Cargo.toml
wait_group/src/: lib.rs
