[workspace]
resolver = "2"

members = [
    "mutex",
    "asyncx",
    "macrox",
    "miox",
    "list",
    "grpc",
    "thumbor",
    "allocator",
    "pointer",
    "http",
    "trait_object",
    "gat",
    "hrtb",
    "thread",
    "ser",
    "closure",
    "network",
    "motorex",
    "generic",
    "pin",
    "lifetime",
    "mem",
    "ownership",
    "eventbus",
    "function",
    "wait_group",
    "hash",
    "ffi",
    "vec",
    "dropck",
    "io",
    "iter",
    "parser",
    "chat",
    "bytes"
]
