[workspace]
resolver = "2"

members = [
    "mutex",
    "asyncx",
    "macrox",
    "miox",
    "list",
    "grpc",
    "thumbor",
    "allocator",
    "pointer",
    "http",
    "trait_object",
    "gat",
    "hrtb",
    "thread",
    "ser",
    "closure",
    "network",
    "motorex",
    "generic",
    "pin",
    "lifetime",
    "mem",
    "ownership",
    "eventbus",
    "function",
    "wait_group",
    "hash",
    "ffi",
    "vec",
    "dropck",
    "io",
    "iter",
    "parser",
    "chat",
    "bytes",
    "shortener",
    "tower"
]

[workspace.dependencies]
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
futures = "0.3"
anyhow = "1.0"
tokio-stream = "0.1.14"
pin-project = "1.1.3"
tower = "0.4.13"
