[package]
name = "asyncx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.0", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"]}
futures = "0.3"
anyhow = "1.0"
tokio-stream = "0.1.11"
