[package]
name = "asyncx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
futures = "0.3"
anyhow = "1.0"
tokio-stream = "0.1.14"
pin-project = "1.1.3"
rand = "0.8.5"
crossbeam = "0.8.2"
async-stream = "0.3.5"
serde = { version = "1.0.147", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"