[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.8.2"
prost = "0.11.2"
tokio = { version = "1.20.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.8.2"
