[package]
name = "http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.20.0", features = ["full"] }
itertools = "0.10.5"
schemars = { version = "0.8.10", features = ["uuid1"] }
serde_json = "1.0.85"
tower = "0.4.13"
hyper = { version = "0.14", features = ["full"] }
