[package]
name = "motorex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
motore = { version = "0.3.2", features = ["tower"] }
tokio = { version = "1.20.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
http = "0.2.9"
hyper = { version = "0.14.24", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
