[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.149"
cvt = "0.1.2"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
libp2p = { version = "0.40.0",  features = ["tcp-tokio"] }
