[package]
name = "shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-rustls"] }
anyhow = "1.0.86"
http = "1.1.0"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
nanoid = "0.4.0"
tracing-subscriber = "0.3.18"
thiserror = "1.0.50"
