[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7"}
mime = "0.3.16"
accept-header = "0.2.3"
anyhow = "1.0"
base64 = "0.13.1"
bytes = "1.2.1"
image = { version = "0.24.5", features = ["webp-encoder"] }
lazy_static = "1.4.0"
lru = "0.8.1"
percent-encoding = "2.2.0"
photon-rs = "0.3.1"
prost = "0.11.2"
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.20.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["add-extension", "compression-full", "trace" ] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
prost-build = "0.11.2"
