[package]
name = "tower"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }
futures = { workspace = true }
anyhow = { workspace = true }
tokio-stream = { workspace = true }
pin-project = { workspace = true }
tower = { workspace = true, features = ["util"] }
